# tfm

./: .gitattributes  .gitignore  README.md  calibration.py  compare_zeeman_doppler.ipynb  convert.py  correos_last.md  derivatives.py  init_data.py  initial_view_calibration.ipynb  mag_v3.ipynb  magnetic_field.ipynb  magnetic_field.py  magnetic_field_combine.ipynb  magnetic_field_strong.ipynb  magnetic_field_v2.ipynb  magnetic_field_weak.ipynb  magnetic_field_weak.py  notes.md  plot_profiles.ipynb  polar_plots_2.ipynb  polarization.py  polarization_plots.ipynb  polarization_plots.py  project_outline.md  pyproject.toml  temperature.ipynb  test.ipynb  velocity.ipynb  velocity.py  visualization.ipynb
data/: AR_12665_133153_0.h5  fts_calibration.npz
functions/: __init__.py  load_pickles.py  noise_level.py  plot_angle_gradient.py  plot_data.py  sums.py  sw.py
lib/: Derived.py  MidPointNorm.py  MidpointNormalize.py  Stokes.py
src/: Stokes.py  plot_data.py
