[project]
name = "tfm"
version = "0.0.1"
description = "TFM: Análisis de propiedades físicas inferidas en regiones solares"
readme = "README.md"
authors = [
    { name = "asola", email = "alondra.solala@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.14",
    "matplotlib>=3.9.4",
    "numpy>=1.3.1",
    "scipy>=0.1",
    "numpy>=1.16.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]
